# FastAPI_Store

./: README.md  docker-compose.yaml  pyproject.toml
keycloak/: keycloak-deployment.yaml  keycloak-start.sh  populate_users.py  postgres-deployment.yaml
src/: .env.template  main.py
src/alembic/versions/: 2025_04_07_1953-be4a88fb6ea9_initial_migration_create_user_profile_.py
src/api/api_v1/: __init__.py  auth.py  auth_keycloak.py  order.py  product.py  user.py
src/api/api_v1/dependencies/: user.py
src/core/: config.py
src/core/models/: __init__.py  order.py  product.py  user_profile.py
src/core/models/mixins/: __init__.py
src/core/schemas/: order.py  product.py  user_profile.py
src/crud/: __init__.py  order.py  product.py
store-db/: docker-compose.yaml
